--- a/config.toml
+++ b/config.toml
@@ -46,7 +46,7 @@ enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/func
   # Toggling this option needs to rebuild SCSS, requires Hugo extended version
   justifyContent = false  # Set "text-align: justify" to `.content`.
 
-  relatedPosts = false  # Add a related content section to all single posts page
+  relatedPosts = true  # Add a related content section to all single posts page
 
   code_copy_button = true # Turn on/off the code-copy-button for code-fields
   
@@ -88,9 +88,9 @@ enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/func
     url = "posts/"
     weight = 20
 
-  [[menu.main]]
-    name = "Squad"
-    url = "squad/"
-    weight = 30
+#  [[menu.main]]
+#    name = "Squad"
+#    url = "squad/"
+#    weight = 30
 
 
