--- a/config.toml
+++ b/config.toml
@@ -38,8 +38,8 @@ enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/func
 
   homeSubtitle = "TehDerpyNinja™"
   footerCopyright = ' &#183; <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
-  bgImg = "images/bg-sides.png"  # Homepage background-image URL
-  images = "images/s1d3s.jpg"
+  bgImg = "/images/bg-sides.png"  # Homepage background-image URL
+  images = "/images/s1d3s.jpg"
   # Prefix of link to the git commit detail page. GitInfo must be enabled.
   # gitUrl = "https://github.com/username/repository/commit/"
 
