--- a/config.toml
+++ b/config.toml
@@ -88,9 +88,9 @@ enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/func
     url = "posts/"
     weight = 20
 
-#  [[menu.main]]
-#    name = "Squad"
-#    url = "squad/"
-#    weight = 30
+  [[menu.main]]
+    name = "Squad"
+    url = "squad/"
+    weight = 30
 
 
