--- a/config.toml
+++ b/config.toml
@@ -97,4 +97,34 @@ enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/func
     url = "squad/"
     weight = 30
 
+[[redirects]]
+  from = "/discord"
+  to = "https://discord.gg/g7UetBZ"
+  status = 302
+  force = false
+
+[[redirects]]
+  from = "/twitter"
+  to = "https://twitter.com/s1d3wyz"
+  status = 302
+  force = false
+
+[[redirects]]
+  from = "/twitch"
+  to = "https://twitch.tv/s1d3wyz"
+  status = 302
+  force = false
+
+[[redirects]]
+  from = "/youtube"
+  to = "https://youtube.com/s1d3wyz"
+  status = 302
+  force = false
+
+[[redirects]]
+  from = "/yt"
+  to = "https://youtube.com/s1d3wyz"
+  status = 302
+  force = false
+
 
